# ZeroDepartureBoard

./: .env.example  Cargo.toml  Makefile  README.md  build.rs
src/: api.rs  board.rs  button.rs  camera.rs  config.rs  display.rs  led.rs  main.rs  motion.rs  onvif.rs  telegram.rs
