[package]
name = "PiZero2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "PiZero2"
path = "src/main.rs"

[dependencies]
# GPIO + display
rppal       = "0.22.1"
sh1106      = "0.5.0"
embedded-graphics = "0.8.2"
linux-embedded-hal = "0.3.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP (ONVIF SOAP + Telegram)
reqwest = { version = "0.13.2", features = ["json"] }

# JSON
serde_json = "1"
serde      = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"     # minimalizace velikosti binárky pro Pi Zero
lto = true
codegen-units = 1
strip = true
