[package]
name = "departure-board"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "departure-board"
path = "src/main.rs"

[dependencies]
# GPIO + display
rppal = "0.22.1"
sh1106 = "0.5.0"
embedded-graphics = "0.8.2"
linux-embedded-hal = "0.3.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["json"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time (local clock for display header)
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
